# lidar-bot

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: view_bot.rviz
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
launch/: rsp.launch.py  sim.launch.py  world.launch.py
lidar-bot_control/: CMakeLists.txt  package.xml
lidar-bot_control/launch/: lidar-bot_control.launch.py
lidar-bot_control/scripts/: lidar-bot_control.py
lidar-bot_description/: CMakeLists.txt  package.xml
lidar-bot_description/gazebo/: lidar-bot.gazebo.xacro
lidar-bot_description/robots/: lidar-bot.urdf.xacro
lidar-bot_description/robots/parts/base/: base.urdf.xacro
lidar-bot_description/robots/parts/lidar_base/: lidar_base.urdf.xacro
lidar-bot_description/robots/parts/lidar_head/: lidar_head.urdf.xacro
lidar-bot_description/robots/parts/suspension/: suspension.urdf.xacro
lidar-bot_description/robots/parts/wheel/: wheel.urdf.xacro
lidar-bot_description/ros2_control/: lidar-bot.ros2_control.xacro
lidar-bot_sim/: CMakeLists.txt  package.xml
lidar-bot_sim/launch/: lidar-bot_spawn.launch.py
lidar_bot_control/: CMakeLists.txt  package.xml
lidar_bot_control/launch/: lidar-bot_control.launch.py
lidar_bot_description/: CMakeLists.txt  package.xml
lidar_bot_description/gazebo/: lidar-bot.gazebo.xacro
lidar_bot_description/robots/: lidar_bot.urdf.xacro
lidar_bot_description/ros2_control/: lidar-bot.ros2_control.xacro
lidar_bot_sim/: CMakeLists.txt  package.xml
lidar_bot_sim/launch/: lidar_bot_spawn.launch.py
(+5 files in other folders)
